--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,9 @@
 <p><%= label_tag 'login' %><br/>
 <%= f.text_field :login %></p>
 
+<p><%= label_tag 'name' %><br/>
+<%= f.text_field :name %></p>
+
 <p><%= label_tag 'email' %><br/>
 <%= f.text_field :email %></p>
 
